# [package]
# name = "yukicoder-md"
# version = "0.1.0"
# authors = ["koyumeishi <koyumeishi+github@gmail.com>"]
# edition = "2018"
# license = "CC0-1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"lib",
	"cli",
	"wasm"
]


