[package]
name = "yukicoder_md_lib"
version = "0.1.0"
authors = ["koyumeishi <koyumeishi+github@gmail.com>"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pulldown-cmark = "0.8.0"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
markup5ever = "0.10.0"
maplit = "1.0.2"
log = "0.4.14"
mime_guess = "2.0.3"
base64 = "0.13.0"
lazy_static = "1.4.0"
tera = "1.7.1"
